# non-linear-cardiac-mechanics

./: .gitignore  CMakeLists.txt  README.md
heart-mesh/: heart-gen.py
src/cubeAndBeam/: CMakeLists.txt
src/cubeAndBeam/src/: NonLinearDiffusion.cpp  NonLinearDiffusion.hpp  beamBendGuccione.cpp  beamBendNeoHooke.cpp  cubeStretchNeoHooke.cpp
src/examples/: CMakeLists.txt
src/examples/beam/: BeamMaterialParameters.hpp  BeamMeshProvider.hpp  CMakeLists.txt  bendGuccione.cpp  bendNeoHooke.cpp
src/examples/heart/: CMakeLists.txt  HeartMaterialParameters.hpp  UniformNeoHookeanMaterialParameters.hpp  guccione-heart.cpp  neo-hookean-heart.cpp
src/examples/neo-hookean-cube/: CMakeLists.txt  HyperCubeMeshProvider.hpp  NeoHookeanMaterialParameters.hpp  cylinder.cpp  hexahedralPulled.cpp  press.cpp  squeeze.cpp  twist.cpp
src/heart/: CMakeLists.txt
src/heart/src/: NonLinearDiffusion.cpp  NonLinearDiffusion.hpp  heartNeoHookeContract.cpp  heartNeoHookeExpand.cpp
src/neo-hookean-cube/: CMakeLists.txt
src/neo-hookean-cube/src/: NeoHookeCube.cpp  NeoHookeCube.hpp  press.cpp  squeeze.cpp  twist.cpp
src/non-linear-elasticity/: CMakeLists.txt
src/non-linear-elasticity/include/: ConstitutiveLaw.hpp  FileMeshProvider.hpp  GuccioneConstitutiveLaw.hpp  MaterialParameters.hpp  MeshProvider.hpp  NeoHookeConstitutiveLaw.hpp  NonLinearElasticitySolver.hpp
src/non-linear-elasticity/src/: NonLinearElasticitySolver.cpp
